otrspod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: otrspod
spec:
  containers:
    - name: otrs
      image: juanluisbaptiste/otrs:latest
      volumeMounts:
      - mountPath: "/opt/otrs/Kernel"
        name: otrspd
  volumes:
    - name: otrspd
      persistentVolumeClaim:
        claimName: pvc-otrs
#DB-t bele és ZSAAAAAAAAAAAAAAAAAAAAAa
